manifests/prometheus/resources/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: haproxy
    ingress.kubernetes.io/auth-url: |-
      http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/nginx
    ingress.kubernetes.io/auth-signin: |-
      https://${alertmanagerhostname}/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
  name: alertmanager
  namespace: prometheus
spec:
  rules:
  - host: ${alertmanagerhostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-alertmanager
            port:
              number: 9093
      - path: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 80
  tls:
  - hosts:
    - ${alertmanagerhostname}
    secretName: alertmanager-tls
